--- a/src/index.css
+++ b/src/index.css
@@ -46,3 +46,44 @@
   box-shadow: inset 0 0 30px 15px white, inset 0 0 30px 30px #a556fb,
     inset 0 0 30px 40px #4922e5;
 }
+.bg-pattern {
+  background-color: black;
+  background-image: linear-gradient(#c0c0c0c0 1px, transparent 1px),
+    linear-gradient(to right, #c0c0c0c0 1px, black 1px);
+  background-size: 60px 60px;
+  position: relative;
+  z-index: 0;
+}
+
+.bg-pattern::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: radial-gradient(
+    circle at center,
+    rgba(0, 0, 0, 0) 0%,
+    rgba(0, 0, 0, 0.3) 40%,
+    rgba(0, 0, 0, 0.8) 100%
+  );
+  z-index: 1;
+  pointer-events: none;
+}
+
+.bg-pattern::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0.9) 20%,
+    rgba(0, 0, 0, 0)
+  );
+  z-index: 2;
+  pointer-events: none; /* Add this line */
+}
